# hermoverkko

./: CMakeLists.txt  README.md  main.cpp
matrix/: matrix.h
